--- a/snack-dadi/index.html
+++ b/snack-dadi/index.html
@@ -2,12 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gioco dei Dadi</title>
+    <title>Gioco dei dadi</title>
   </head>
   <body>
-  
-    <script src="js/script.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
